plugins/javaFX/testData/coercing/rootTagSubtagsCoercing.fxml
<?import javafx.scene.layout.GridPane?>
<?import javafx.scene.control.Button?>
<?import java.lang.String?>
<?import javafx.collections.FXCollections?>
<fx:root type="javafx.scene.layout.GridPane" xmlns:fx="http://javafx.com/fxml">
    <fx:define>
        <FXCollections fx:factory="observableArrayList">
            <String fx:value="A"/>
            <String fx:value="B"/>
            <String fx:value="C"/>
        </FXCollections>
    </fx:define>
    <<error descr="Unable to coerce javafx.collections.ObservableList to javafx.scene.Node">FXCollections</error> fx:factory="observableArrayList">
        <String fx:value="A"/>
        <String fx:value="B"/>
        <String fx:value="C"/>
    </<error descr="Unable to coerce javafx.collections.ObservableList to javafx.scene.Node">FXCollections</error>>
</fx:root>